// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LifestyleResultTipsModal component should match snapshot 1`] = `
<div
  class="MuiDialog-root"
  role="presentation"
  style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
>
  <div
    aria-hidden="true"
    class="MuiBackdrop-root LifestyleResultTipsModal-backdrop-4"
    style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
  />
  <div
    data-test="sentinelStart"
    tabindex="0"
  />
  <div
    class="MuiDialog-container MuiDialog-scrollPaper LifestyleResultTipsModal-dialogScrollPaper-2"
    role="none presentation"
    style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    tabindex="-1"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation24 MuiDialog-paper MuiDialog-paperScrollPaper LifestyleResultTipsModal-dialogPaperScrollPaper-3 MuiDialog-paperWidthSm LifestyleResultTipsModal-dialogPaperWidthSm-1 LifestyleResultTipsModal-dialogPaperWidthSm-10 MuiPaper-rounded"
      role="dialog"
    >
      <div
        class="MuiDialogTitle-root LifestyleResultTipsModal-dialogTitle-5"
      >
        <div
          class="MuiBox-root MuiBox-root-57"
        >
          <button
            aria-label="close"
            class="MuiButtonBase-root MuiIconButton-root LifestyleResultTipsModal-iconButton-7 MuiIconButton-colorSecondary"
            data-testid="btn-close-Test title"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                role="presentation"
                style="width: 1.125rem; height: 1.125rem;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M21.8987 3.23223L20.768 2.10156L12 10.8696L3.23199 2.10156L2.10132 3.23223L10.8693 12.0002L2.10132 20.7682L3.23199 21.8989L12 13.1309L20.768 21.8989L21.8987 20.7682L13.1307 12.0002L21.8987 3.23223Z"
                  fill="#333333"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
      <div
        class="MuiDialogContent-root LifestyleResultTipsModal-dialogContent-6"
      >
        <div>
          Grid Component
          <span />
          <div>
            GridItem Component
            <span>
              columns = [object Object]
            </span>
            <div
              class="MuiTypography-root makeStyles-root-81 makeStyles-root-82 MuiTypography-body1"
            >
              Test title
            </div>
            <div
              class="MuiTypography-root makeStyles-root-113 makeStyles-root-114 MuiTypography-body1"
            >
              Test subtitle
            </div>
            <div
              class="MuiBox-root MuiBox-root-115"
            >
              <div
                class="MuiTypography-root makeStyles-root-116 makeStyles-root-117 MuiTypography-body1"
              >
                Test description
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiBox-root MuiBox-root-118"
        >
          <div>
            Error Component
            <span>
              errorState = false
              className = LifestyleResultTipsModal-error-9
            </span>
            <span>
              <div>
                ItemContainer
                <span>
                  itemLength = 1
                  numberOfColumns = 4
                </span>
                <span>
                  <div>
                    Tips Component
                    <span>
                      topic = test topic
                      source = test source
                      text = test text
                      link = http://xyz.com
                      trackingData = [object Object]
                    </span>
                  </div>
                </span>
              </div>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    data-test="sentinelEnd"
    tabindex="0"
  />
</div>
`;

exports[`LifestyleResultTipsModal component should match snapshot when featureToggleLifestyleSuggestions is on 1`] = `
<div
  class="MuiDialog-root"
  role="presentation"
  style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
>
  <div
    aria-hidden="true"
    class="MuiBackdrop-root LifestyleResultTipsModal-backdrop-132"
    style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
  />
  <div
    data-test="sentinelStart"
    tabindex="0"
  />
  <div
    class="MuiDialog-container MuiDialog-scrollPaper LifestyleResultTipsModal-dialogScrollPaper-130"
    role="none presentation"
    style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    tabindex="-1"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation24 MuiDialog-paper MuiDialog-paperScrollPaper LifestyleResultTipsModal-dialogPaperScrollPaper-131 MuiDialog-paperWidthSm LifestyleResultTipsModal-dialogPaperWidthSm-129 LifestyleResultTipsModal-dialogPaperWidthSm-138 MuiPaper-rounded"
      role="dialog"
    >
      <div
        class="MuiDialogTitle-root LifestyleResultTipsModal-dialogTitle-133"
      >
        <div
          class="MuiBox-root MuiBox-root-185"
        >
          <button
            aria-label="close"
            class="MuiButtonBase-root MuiIconButton-root LifestyleResultTipsModal-iconButton-135 MuiIconButton-colorSecondary"
            data-testid="btn-close-Test title"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                role="presentation"
                style="width: 1.125rem; height: 1.125rem;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M21.8987 3.23223L20.768 2.10156L12 10.8696L3.23199 2.10156L2.10132 3.23223L10.8693 12.0002L2.10132 20.7682L3.23199 21.8989L12 13.1309L20.768 21.8989L21.8987 20.7682L13.1307 12.0002L21.8987 3.23223Z"
                  fill="#333333"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
      <div
        class="MuiDialogContent-root LifestyleResultTipsModal-dialogContent-134"
      >
        <div>
          Grid Component
          <span />
          <div>
            GridItem Component
            <span>
              columns = [object Object]
            </span>
            <div
              class="MuiTypography-root makeStyles-root-209 makeStyles-root-210 MuiTypography-body1"
            >
              Test title
            </div>
            <div
              class="MuiTypography-root makeStyles-root-241 makeStyles-root-242 MuiTypography-body1"
            >
              Test subtitle
            </div>
            <div
              class="MuiBox-root MuiBox-root-243"
            >
              <div
                class="MuiTypography-root makeStyles-root-244 makeStyles-root-245 MuiTypography-body1"
              >
                Test description
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiBox-root MuiBox-root-246"
        >
          <div>
            Error Component
            <span>
              errorState = false
              className = LifestyleResultTipsModal-error-137
            </span>
            <span>
              <div>
                ItemContainer
                <span>
                  itemLength = 1
                  numberOfColumns = 4
                </span>
                <span>
                  <div>
                    Tips Component
                    <span>
                      topic = test topic
                      source = test source
                      text = test text
                      link = http://xyz.com
                      trackingData = [object Object]
                    </span>
                  </div>
                </span>
              </div>
            </span>
          </div>
        </div>
        <div
          class="MuiBox-root MuiBox-root-247"
        >
          <div>
            Recommendations for specific product
            <span>
              tipCategory = test
              title = Related products
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    data-test="sentinelEnd"
    tabindex="0"
  />
</div>
`;
